# chad-bot-rustico

./: .gitignore  Cargo.toml  README.md  Secrets.toml.example  Shuttle.toml  wallet.sql
.github/workflows/: checks.yaml
assets/data/: courses.json
crates/cripto_api/: Cargo.toml
crates/cripto_api/src/: api.rs  coin_gecko.rs  coins.rs  lib.rs  main.rs
crates/gen_image/: Cargo.toml
crates/gen_image/src/: lib.rs  main.rs
crates/meme_generator/: Cargo.toml
crates/meme_generator/src/: api.rs  lib.rs  main.rs  meme.rs
scripts/: db.sql
src/: bot.rs  consts.rs  db.rs  errors.rs  gifs.rs  main.rs  meme.rs  router.rs  state.rs  utils.rs
src/commands/: bans_info.rs  coders_leaderboard.rs  courses.rs  crypto_prices.rs  donate_coins.rs  fox.rs  list_projects.rs  members_count.rs  meme.rs  mod.rs  propose_project.rs  register_wallet.rs  say_hello.rs  wallet_info.rs  wallet_leaderboard.rs  warn.rs
src/cronjobs/: mod.rs  trends.rs
src/events/: english_day.rs  mod.rs  twitter_links_message.rs  utils.rs
src/github/: mod.rs  repository.rs  search.rs
src/helpers/: langs.rs  mod.rs
src/projects/: models.rs  repository.rs
src/router/: free_courses.rs  health_check.rs  mod.rs  reminders.rs  scraping.rs  setup.rs  trending_repos.rs  wallet.rs
src/wallet/: models.rs  services.rs
src/welcome/: banner.rs  info.rs  mod.rs
