workspace = { members = ["crates/gen_image"] }

[package]
name = "chad-discord-bot"
description = "Bot de la comunidad de discord"
version = "0.1.0"
edition = "2021"
authors = [
    "Andrés Velasco <velasco.andrs@gmail.com>",
    "Mauro Caceres <maurodavidcaceres@gmail.com>",
]

[dependencies]
axum = "0.7.4"
shuttle-runtime = "0.46.0"
tokio = "1.28.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
octorust = { version = "0.7.0", features = ["httpcache"] }
reqwest = "=0.12.5"
serenity = { version = "0.12.2", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "collector",
] }
tracing = "0.1.40"
anyhow = "1.0.86"
shuttle-serenity = "0.46.0"
chrono = { version = "0.4.34", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "runtime-async-std",
    "tls-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "bigdecimal",
] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
whatlang = "0.16.4"
regex = "1.10.5"
whichlang = "0.1.0"
lingua = { version = "1.6.2", default-features = false, features = [
    "english",
    "spanish",
] }
chrono-tz = "0.9.0"
gen_image = { version = "0.1.0", path = "crates/gen_image" }
